--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -52,5 +52,10 @@
   		<artifactId>junit</artifactId>
   		<version>4.10</version>
   	</dependency>
+  	<dependency>
+	    <groupId>com.googlecode.matrix-toolkits-java</groupId>
+	    <artifactId>mtj</artifactId>
+	    <version>0.9.14</version>
+	</dependency>
   </dependencies>
 </project>
