--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -57,5 +57,10 @@
 	    <artifactId>mtj</artifactId>
 	    <version>0.9.14</version>
 	</dependency>
+	<dependency>
+  <groupId>org.jblas</groupId>
+  <artifactId>jblas</artifactId>
+  <version>1.2.3</version>
+</dependency>
   </dependencies>
 </project>
